--- a/player/Server/LZL/LZL/appsettings.json
+++ b/player/Server/LZL/LZL/appsettings.json
@@ -9,5 +9,6 @@
   "MongoConnection": {
     "ConnectionString": "mongodb://root:123456@42.193.119.71:27017",
     "Database": "lzl"
-  }
+  },
+  "Test": "123456"
 }
