--- a/player/Web/LZL/lzl-web/.env.production
+++ b/player/Web/LZL/lzl-web/.env.production
@@ -1,3 +1,4 @@
-VITE_API_BASE_URL=https://ai-voice.childmakers.com
-VITE_API_Proxy_PATH=/
-BASE_URL=/usage/
+VITE_API_BASE_URL=http://42.193.119.71:8020
+VITE_File_BASE_URL=http://42.193.119.71:8010/
+VITE_API_Proxy_PATH="/api"
+BASE_URL=/
