--- a/player/Web/LZL/lzl-web/.env.development
+++ b/player/Web/LZL/lzl-web/.env.development
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=http://localhost:5211
-VITE_File_BASE_URL=http://localhost:5211/
+VITE_API_BASE_URL=http://42.193.119.71:8010
+VITE_File_BASE_URL=http://42.193.119.71:8010/
 VITE_API_Proxy_PATH=/api
 BASE_URL =./
