--- a/player/nginx.conf
+++ b/player/nginx.conf
@@ -39,6 +39,7 @@ http {
         location / {
             root   /usr/share/nginx/html/dist;
             index  index.html index.htm;
+            try_files $uri $uri/ /index.html; # 确保 Vue Router 的历史模式工作正常
         }
 
         location /api {
